--- a/package.json
+++ b/package.json
@@ -16,13 +16,17 @@
     "change-case": "^4.1.2",
     "faker-js": "^1.0.0",
     "firebase": "^9.19.1",
+    "lottie-react": "^2.4.0",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "simplebar-react": "^3.2.4",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
