--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
+    "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "simplebar-react": "^3.2.4",
