--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lottie-react": "^2.4.0",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
