--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "change-case": "^4.1.2",
     "faker-js": "^1.0.0",
     "firebase": "^9.19.1",
+    "formik": "^2.2.9",
     "lottie-react": "^2.4.0",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
@@ -33,7 +34,8 @@
     "simplebar-react": "^3.2.4",
     "styled-components": "^5.3.9",
     "twind": "^0.16.19",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
